--- a/verkkokauppa/src/App.css
+++ b/verkkokauppa/src/App.css
@@ -4,12 +4,17 @@
 
 .Kauppaan {
   text-align: center;
-  position: fixed;
   top: 10%;
   left: 10%;
   padding-left: 20px;
   padding-right: 20px;
   font-size: 28px;
+}
+
+.Kauppaan button {
+  background-color: #152b2d;
+  border: 1px solid #1f3e41;
+  color: white;
 }
 
 .Ostoskori {
@@ -68,6 +73,12 @@
 .Kuva {
   max-width: 300px;
   max-height: 200px;
+  padding: 15px;
+}
+
+p {
+  font-size: 20px;
+  text-align: center;
   padding: 15px;
 }
 
