--- a/verkkokauppa/src/App.css
+++ b/verkkokauppa/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+body {
+  background-color: #1f3e41;
+  color: aliceblue;
+}
+
 .Kauppaan {
   text-align: center;
   top: 10%;
